--- a/lottery-domain/pom.xml
+++ b/lottery-domain/pom.xml
@@ -22,6 +22,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.itedus.lottery</groupId>
+            <artifactId>lottery-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <modelVersion>4.0.0</modelVersion>
 
