第六节完成

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,16 @@
 hs_err_pid*
 
 /lottery-application/target/
+
+
+# Maven
+target/
+**/target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+.mvn/
+mvnw
+mvnw.cmd
