--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -52,12 +52,12 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.7.1</version>
+            <version>3.3.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>2.7.1</version>
+            <version>3.3.4</version>
         </dependency>
         <dependency>
             <groupId>cn.itedus.lottery</groupId>
@@ -74,6 +74,12 @@
             <artifactId>lottery-common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.itedus.lottery</groupId>
+            <artifactId>lottery-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
