--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,15 @@
                 <artifactId>hutool-all</artifactId>
                 <version>5.5.0</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>2.1.4</version>
+            </dependency>
         </dependencies>
+
+
     </dependencyManagement>
 
     <build>
