--- a/lottery-common/pom.xml
+++ b/lottery-common/pom.xml
@@ -7,6 +7,9 @@
         <groupId>cn.itedus.lottery</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <dependencies>
+    </dependencies>
+
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>jar</packaging>
