--- a/lottery-common/pom.xml
+++ b/lottery-common/pom.xml
@@ -8,6 +8,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <modelVersion>4.0.0</modelVersion>
