--- a/lottery-domain/pom.xml
+++ b/lottery-domain/pom.xml
@@ -20,12 +20,10 @@
             <groupId>cn.itedus.lottery</groupId>
             <artifactId>lottery-common</artifactId>
             <version>1.0-SNAPSHOT</version>
-
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -38,6 +36,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
     </dependencies>
     <modelVersion>4.0.0</modelVersion>
