--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>lottery-rpc</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.bugstack.middleware</groupId>
+            <artifactId>db-router-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
