--- a/lottery-interfaces/src/main/resources/application.yml
+++ b/lottery-interfaces/src/main/resources/application.yml
@@ -1,6 +1,32 @@
 server:
   port: 8080
 
+
+# 多数据源路由配置
+mini-db-router:
+  jdbc:
+    datasource:
+      dbCount: 2
+      tbCount: 4
+      default: db00
+      routerKey: uId
+      list: db01,db02
+      db00:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/lottery_02?useSSL=false&serverTimezone=UTC
+        username: root
+        password: 123456
+      db01:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/lottery_01?useSSL=false&serverTimezone=UTC
+        username: root
+        password: 123456
+      db02:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/lottery_02?useSSL=false&serverTimezone=UTC
+        username: root
+        password: 123456
+
 spring:
   datasource:
     username: root
