--- a/lottery-infrastructure/pom.xml
+++ b/lottery-infrastructure/pom.xml
@@ -31,6 +31,10 @@
             <groupId>cn.bugstack.middleware</groupId>
             <artifactId>db-router-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+        </dependency>
 
 
     </dependencies>
