--- a/lottery-interfaces/pom.xml
+++ b/lottery-interfaces/pom.xml
@@ -15,6 +15,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>cn.itedus.lottery</groupId>
+            <artifactId>lottery-application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -67,12 +74,23 @@
             <groupId>cn.bugstack.middleware</groupId>
             <artifactId>db-router-spring-boot-starter</artifactId>
         </dependency>
+        <!-- MapStruct begin -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
         <dependency>
             <groupId>cn.itedus.lottery</groupId>
             <artifactId>lottery-application</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
+        <!-- MapStruct end -->
+
     </dependencies>
 
     <build>
