--- a/pom.xml
+++ b/pom.xml
@@ -100,9 +100,13 @@
                 <artifactId>mapstruct-processor</artifactId>
                 <version>1.4.2.Final</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>2.7.14</version>
+            </dependency>
         </dependencies>
-
-
     </dependencyManagement>
 
     <build>
