--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,18 @@
                 <artifactId>spring-kafka</artifactId>
                 <version>2.7.14</version>
             </dependency>
+
+            <!-- xxl-job-core https://github.com/xuxueli/xxl-job/-->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+
+
         </dependencies>
+
+
     </dependencyManagement>
 
     <build>
