更新文档和注释

--- a/lottery-interfaces/src/main/resources/application.yml
+++ b/lottery-interfaces/src/main/resources/application.yml
@@ -107,4 +107,7 @@ xxl:
       logretentiondays: 50
     accessToken: default_token
 
-
+logging:
+  level:
+    cn.itedus.lottery: DEBUG
+    org.springframework: INFO
